--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -16,6 +16,8 @@
     <string>Arenas</string>
 <key>マスタースプリット</key>
     <string>MasterSplit</string>
+<key>あ</key>
+    <string>a</string>
 <key>その他</key>
     <string>Others</string>
 <key>メインメニュー</key>
