--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -220,7 +220,7 @@
 <key>編集     </key>
     <string>Edit     </string>
 
-<key>分裂/粒サイズ変更適応</key>
+<key>サイズ適応</key>
     <string>Resize Buttons</string>
 
 <key>ポート</key>
@@ -311,6 +311,16 @@
     <string>MasterSplit </string>
 <key>粒チ</key>
     <string>Macro</string>
+
+<key>自己チャ </key>
+    <string>CenterTap Self Feed </string>
+<key>自己チャ</key>
+    <string>CenterTap Self Feed</string>
+<key>範囲設定</key>
+    <string>Set Range</string>
+<key>範囲確認</key>
+    <string>Show Range</string>
+
 <key>敵のスコア</key>
     <string>Off</string>
 
@@ -613,7 +623,7 @@ Green (you can eat the enemy by splitting)</string>
 
 <key>desc:編集     </key><string>Edit: drag to move, pinch to resize</string>
 
-<key>desc:分裂/粒サイズ変更適応</key><string>No description yet</string>
+<key>desc:サイズ適応</key><string>No description yet</string>
 
 <key>desc:ポート</key><string>No description yet</string>
 
