--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -13,7 +13,7 @@
 <key>非表示</key>
     <string>Hidden</string>
 <key>アリーナ</key>
-    <string>Arenas</string>
+    <string>Arena</string>
 <key>マスタースプリット</key>
     <string>MasterSplit</string>
 <key>あ</key>
