--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -28,6 +28,9 @@
 <key>オフラインクエスト</key>
     <string>Offline Quest</string>
 
+<key>2カラムメニュー</key>
+    <string>2Column Menu</string>
+
 <key>メニュー透明度</key>
     <string>Menu Opacity</string>
 
