--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -320,7 +320,7 @@
 
 <key>自己チャ </key>
     <string>CenterTap Self Feed </string>
-<key>自己チャ</key>
+<key>中央タップ自己チャ</key>
     <string>CenterTap Self Feed</string>
 <key>範囲設定</key>
     <string>Set Range</string>
