--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -105,7 +105,7 @@
 <key>ポーション</key>
     <string>Potions</string>
 <key>コンテニュー</key>
-    <string>Continue Playing</string>
+    <string>Continue Game</string>
 <key>レベルアップ</key>
     <string>Level Up</string>
 
