--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -328,7 +328,7 @@
     <string>Pause To Self Feed</string>
 <key>中央タップ範囲設定</key>
     <string>CenterTap Set Range</string>
-<key>中央タップ囲確認</key>
+<key>中央タップ範囲確認</key>
     <string>CenterTap Show Range</string>
 
 <key>敵のスコア</key>
