--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -223,7 +223,7 @@
 <key>カスタムラベル </key>
     <string>Custom Label </string>
 
-<key>編集     </key>
+<key>カスタムラベル編集</key>
     <string>Edit     </string>
 
 <key>サイズ適応</key>
