--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -262,6 +262,9 @@
 <key>マスタースプリットボタン</key>
     <string>MasterSplit Button</string>
 
+<key>粒チ</key>
+    <string>Macro Button</string>
+
 <key>設定の保存/読み込み</key>
     <string>Mods Settings</string>
 
