--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -400,8 +400,8 @@
     <string>Cancel</string>
 
 
-<key>ファーム</key>
-    <string>Farm</string>
+<key>ファームメニュー</key>
+    <string>Farm Menu</string>
 
 <key>自動分裂</key>
     <string>Auto Split</string>
