--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -146,7 +146,7 @@
 <key>強制カンスト</key>
     <string>Force Max Out</string>
 
-<key>強制カンスト</key>
+<key>強制カンスト感度</key>
     <string>Force Max Out Sensitivity</string>
 
 <key>120FPSカーソル</key>
