--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -84,6 +84,10 @@
     <string>Problematic Nickname</string>
 <key>トークン</key>
     <string>Tokens</string>
+<key>レベル</key>
+    <string>Levels</string>
+<key>ミステリースキン</key>
+    <string>Mystery Skins</string>
 
 <key>非表示 </key>
     <string>Hide </string>
