--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -14,8 +14,8 @@
     <string>Hidden</string>
 <key>アリーナ</key>
     <string>Arena</string>
-<key>マスタースプリット</key>
-    <string>MasterSplit</string>
+<key>ボタン系</key>
+    <string>Buttons</string>
 <key>あ</key>
     <string>a</string>
 <key>その他</key>
