--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -216,7 +216,7 @@
     <string>Left ←</string>
 
 <key>パーティー</key>
-    <string>Party</string>
+    <string>Party Code</string>
 <key>矢印距離</key>
     <string>Friend Distance</string>
 <key>マスラベルサイズ</key>
