--- a/プロパティ/英語メニュー.plist
+++ b/プロパティ/英語メニュー.plist
@@ -177,8 +177,8 @@
     <string>Edit</string>
 <key>ポーズボタン</key>
     <string>Pause Button</string>
-<key>強制メインメニュー</key>
-    <string>Force Main Menu</string>
+<key>自動再プレイ</key>
+    <string>AutoReplay</string>
 
 <key>タップ回数</key>
     <string>Tap Count</string>
